--- a/belgian.html
+++ b/belgian.html
@@ -16,7 +16,7 @@
     <div class="header container">
         <div class="header_logo">
             <center>
-                <img class="menu" src="inshot/logo.png" style="width:25%" alt="">
+                <img class="menu" src="logo.png" style="width:25%" alt="">
             </center>
         </div>
 
@@ -26,9 +26,9 @@
      list-style:none; padding:0; margin:10px 0;">
             <li class="col-6 justify-content-center"><a
                     style="text-decoration:none;color:red; align-items:center; font-size:20px"
-                    href="./index.php">Мороженное</a></li>
+                    href="./index.html">Мороженное</a></li>
             <li class="col-6 d-flex justify-content-center"><a style="text-decoration:none;color:red; font-size:20px"
-                    href="./belgian.php">Бельгийские</a></li>
+                    href="./belgian.html">Бельгийские</a></li>
             <!-- <li><a style="text-decoration:none;" href="">Коктейль</a></li> -->
         </ul>
     </div>
