--- a/belgian.html
+++ b/belgian.html
@@ -16,7 +16,7 @@
     <div class="header container">
         <div class="header_logo">
             <center>
-                <img class="menu" src="logo.png" style="width:25%" alt="">
+                <img class="menu" src="inshot/logo.png" style="width:25%" alt="">
             </center>
         </div>
 
@@ -26,9 +26,9 @@
      list-style:none; padding:0; margin:10px 0;">
             <li class="col-6 justify-content-center"><a
                     style="text-decoration:none;color:red; align-items:center; font-size:20px"
-                    href="./index.html">Мороженное</a></li>
+                    href="./index.php">Мороженное</a></li>
             <li class="col-6 d-flex justify-content-center"><a style="text-decoration:none;color:red; font-size:20px"
-                    href="./belgian.html">Бельгийские</a></li>
+                    href="./belgian.php">Бельгийские</a></li>
             <!-- <li><a style="text-decoration:none;" href="">Коктейль</a></li> -->
         </ul>
     </div>
@@ -88,6 +88,8 @@
                        299 сом
                     </p>
                 </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12 " style="margin: 5px 0;">
 
                 <div style="background: rgb(0, 0, 0);
             border:rgb(240, 176, 38) 1px solid;
@@ -140,6 +142,8 @@
                         349 сом
                     </p>
                 </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12 " style="margin: 5px 0;">
 
                 <div style="background: rgb(0, 0, 0);
             border:rgb(240, 176, 38) 1px solid;
@@ -192,6 +196,8 @@
                        399 сом
                     </p>
                 </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12 " style="margin: 5px 0;">
 
                 <div style="background: rgb(0, 0, 0);
             border:rgb(240, 176, 38) 1px solid;
@@ -244,6 +250,8 @@
                        449 сом
                     </p>
                 </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12 " style="margin: 5px 0;">
 
                 <div style="background: rgb(0, 0, 0);
             border:rgb(240, 176, 38) 1px solid;
@@ -296,6 +304,8 @@
                        499 сом
                     </p>
                 </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12 " style="margin: 5px 0;">
 
                 <div style="background: rgb(0, 0, 0);
             border:rgb(240, 176, 38) 1px solid;
@@ -348,6 +358,8 @@
                        549 сом
                     </p>
                 </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12 " style="margin: 5px 0;">
 
                 <div style="background: rgb(0, 0, 0);
             border:rgb(240, 176, 38) 1px solid;
