--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <div class="">
                                 <img class="header_logo_png" style="width:100%" src="soboy6.png" alt="">
                             </div>
-                            <p class="item_title" style="font-size:large;text-align:center; color:black;margin:0">Ассорти</p>
+                            <p class="item_title" style="font-size:large;text-align:center; color:black;margin:0">Рожок</p>
                             <p class="item_price" style="font-size: medium; text-align:center; margin:0">79сом</p>
                         </div>
                     </div>
