--- a/bubble.html
+++ b/bubble.html
@@ -22,15 +22,12 @@
 
     </div>
     <div class="header_menu">
-        <ul class="row" style="display: flex; justify-content:space-around;
-     list-style:none; padding:0; margin:10px 0;">
-            <li class="col-6 justify-content-center"><a
-                    style="text-decoration:none;color:red; align-items:center; font-size:20px"
-                    href="./index.html">Мороженное</a></li>
-                    <li><a style="text-decoration:none;color:red; font-size:large" href="./bubble.html">Гонконгские</a></li>
-            <li class="col-6 d-flex justify-content-center"><a style="text-decoration:none;color:red; font-size:20px"
-                    href="./belgian.html">Бельгийские</a></li>
-            <!-- <li><a style="text-decoration:none;" href="">Коктейль</a></li> -->
+        <ul style="display: flex; justify-content:space-around;
+     list-style:none; padding:0;margin:10px 0">
+            <li><a style="text-decoration:none;color:red; font-size:large" href="./index.php">Мороженное</a></li>
+            <li><a style="text-decoration:none;color:red; font-size:large" href="./bubble.html">Гонконгские</a></li>
+            <li><a style="text-decoration:none;color:red; font-size:large" href="./belgian.html">Бельгийские</a></li>
+            
         </ul>
     </div>
     <div class="section container">
