--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="header_menu">
         <ul style="display: flex; justify-content:space-around;
      list-style:none; padding:0;margin:10px 0">
-            <li><a style="text-decoration:none;color:red; font-size:large" href="./index.php">Мороженное</a></li>
+            <li><a style="text-decoration:none;color:red; font-size:large" href="./index.html">Мороженное</a></li>
             <li><a style="text-decoration:none;color:red; font-size:large" href="./bubble.html">Гонконгские</a></li>
             <li><a style="text-decoration:none;color:red; font-size:large" href="./belgian.html">Бельгийские</a></li>
             
